--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@200;300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css"> 
-  <script defer src="/script.js"></script>
+  <script defer src="script.js"></script>
   <title>Frontend Mentor | Loopstudios landing page</title>
 </head>
 <body>
